--- a/index.html
+++ b/index.html
@@ -8,5 +8,53 @@
 	<p>
 	Managed by Vinodh
 	</p>
+	<br>
+	is an alumnus of BITS Pilani Hyderabad campus<br>
+he has been a Google AdSense publiher for a decade.<br>
+<br>
+He ha contributed over 500+ articles on Me mechanical,EduGeneral and VRC works.<br>
+<br>
+Multifaceted professional with expertise in various fields.<br>
+<br>
+Professional Experience: He is an Content creator: He is an editor and writer at Me Mechanical, contributing to the Mechanical Engineering Portal.
+<br>
+WordPress Developer and Designer: He has experience as a WordPress developer and designer. Publications: He has published numerous articles, with over 300 contributions to the Mechanical Engineering Portal.
+<br><br>
+Overall, I am a versatile professional with a background in engineering, writing, and editing and experience in talent management and research.
+<br><br>
+
+Blogs:<br>
+
+1. Me Mechanical<br>
+
+<br>
+
+
+2. EduGeneral<br>
+
+
+<br>
+
+
+
+Education:<br>
+<br>
+1. EdX, WQU<br>
+Has learned and completed Data Science modules on EdX & Applied Data Science Lab on WorldQuant Univerity.<br>
+
+2. Birla Institute of technology and Science,Pilani-Hyderabad<br>
+Bachelor of Engineering in Mechanical<br>
+
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
   </body>
 </html>
